cilium/cilium/cks/backend-to-cassandra.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-backend-to-cassandra
  namespace: cks
spec:
  endpointSelector:
    matchLabels:
      cks-app: backend
  egress:
  - toEndpoints:
    - matchLabels:
        database: cassandra
        k8s:io.kubernetes.pod.namespace: cassandra
