cilium/cilium/cks/deny-all.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all
  namespace: cks
spec:
  endpointSelector: {}
  ingress:
  - {}
  egress:
  - {}
