cilium/cilium/cks/frontend-to-backend.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: cks
spec:
  endpointSelector:
    matchLabels:
      cks-app: frontend
  egress:
  - toEndpoints:
    - matchLabels:
        cks-app: backend
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
